# resh

./: .gitignore  AI_MESSAGE_400_DIAGNOSIS.md  LICENSE  MACOS_SUPPORT_PLAN.md  README.md  index.html  package-lock.json  package.json  speed_sftp.md  speed_sftp_rollout_notes.md  speed_sftp_todo.md  vite.config.ts
.github/workflows/: macos-ci.yml  release.yml
docs/macos/: phase-3-implementation.md  phase-4-signing-notarization.md
docs/plans/: 2026-01-25-resh-ssh-client-design.md  2026-01-27-logging-system-design.md
notes/macos/: phase-1-ime-shift-symbol-rca.md  phase-2-ime-shift-symbol-fix.md  phase-3-ime-shift-symbol-verify.md
public/: tauri-splash.html
scripts/: check-ai-cancel-isolation.mjs  check-ai-tool-confirmation.mjs  check-github-actions-pinned.mjs  check-pwsh-sftp-entry.mjs  check-release-version.mjs  check-updater-release-assets.mjs  macos_build.mjs  macos_release_build.mjs  macos_release_verify.mjs  macos_tauri_smoke.mjs  run-pwsh.mjs  sftp_baseline_matrix.ps1  sftp_baseline_report_template.md  sftp_fairness_regression.ps1  sftp_perf_suite.ps1  test-macos-update-helper.mjs  test-windows-update-helper.mjs
scripts/checklists/: ai-agent-react-e2e-checklist.md  ai-cancel-e2e-checklist.md  sftp-edit-conflict-e2e-checklist.md  updater-e2e-checklist.md  updater-release-contract.md  webdav-sync-e2e-checklist.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: create_ico.py  create_placeholders.py  icon.icns
src-tauri/src/: app_paths.rs  db.rs  lib.rs  logger.rs  main.rs  master_password.rs  window_state.rs
src-tauri/src/ai/: client.rs  copilot.rs  manager.rs  mod.rs  prompts.rs  validator.rs
src-tauri/src/commands/: ai.rs  config.rs  connection.rs  master_password.rs  mod.rs  sftp.rs  sftp_edit.rs  sync.rs  updater.rs
src-tauri/src/commands/ai/: agent_loop_state.rs  copilot.rs  history.rs  mod.rs  stream_parsing.rs  tool_registry.rs  tool_runtime.rs  turn.rs  types.rs
src-tauri/src/config/: encryption.rs  loader.rs  mod.rs  sync_manager.rs  sync_merge.rs  sync_protocol.rs  sync_state.rs  types.rs
src-tauri/src/http/: mod.rs
src-tauri/src/sftp_manager/: cache.rs  copy.rs  edit.rs  edit_revision.rs  mod.rs  tuning.rs  types.rs
src-tauri/src/ssh_manager/: connection.rs  handler.rs  mod.rs  ssh.rs
src-tauri/src/updater/: assets.rs  check.rs  download.rs  github.rs  mod.rs  paths.rs  restart_barrier.rs  restart_session.rs  types.rs  version.rs
src-tauri/src/updater/install/: macos.rs  manifest.rs  mod.rs  result.rs  windows.rs
src-tauri/src/webdav/: client.rs  conflict.rs  mod.rs
src/components/: AISidebar.css  AISidebar.tsx  ConfirmationModal.css  ConfirmationModal.tsx  CustomSelect.css  CustomSelect.tsx  EditorConflictDialog.tsx  EditorTab.tsx  EmojiText.tsx  ExternalEditConflictDialog.tsx  FileConflictDialog.tsx  FormModal.css  FormModal.tsx  MainWindow.tsx  ManualAuthModal.tsx  MasterPasswordModal.tsx  NewTabButton.css  NewTabButton.tsx  SFTPSidebar.css  SFTPSidebar.tsx  ServerContextMenu.tsx  SnippetsSidebar.css  SnippetsSidebar.tsx  SplitTabPickerModal.tsx  SplitViewButton.tsx  StatusBar.css  StatusBar.tsx  TabContextMenu.tsx  TerminalTab.tsx  Toast.tsx  TransferStatusPanel.css  TransferStatusPanel.tsx  UpdateDialog.tsx  WelcomeScreen.css  WelcomeScreen.tsx  WindowControls.tsx
src/components/ai/: MessageBubble.tsx  ToolConfirmation.tsx  helpers.ts  markdown.tsx
src/components/main/: helpers.ts  types.ts  useTabLayoutMeasurement.ts
src/components/settings/: AITab.tsx  AboutTab.css  (+16 more)
src/hooks/: useCommandBlockBar.ts  useConfig.ts  useConfig.tsx  useTabDragDrop.ts  useTerminal.ts  useTheme.ts  useUpdateManager.ts
src/i18n/: index.ts  locales.ts
src/services/: aiService.ts
src/stores/: transferStore.ts  useAIStore.ts  useUpdateStore.ts
src/types/: ai-config.ts  ai.ts  api.ts  authentication.ts  config.ts  editor.ts  index.ts  proxy.ts  server.ts  settings.ts  sftp.ts  snippet.ts  sync.ts  update.ts  utilities.ts
src/utils/: common.ts  idGenerator.ts  logger.ts  macOsImeShiftSymbol.ts  platform.ts  recentServers.ts  restartUpdate.ts  serverGroups.ts  terminalUtils.ts  validation.ts
(+5 files in other folders)
