[package]
name = "resh"
version = "0.1.0"
description = "Resh SSH Client"
authors = [""]
edition = "2021"
rust-version = "1.60"
license = ""
repository = ""
default-run = "resh"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
russh = "0.40"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
argon2 = "0.5"
lazy_static = "1.5.0"
async-trait = "0.1.89"
russh-keys = "0.40.0"
image = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "resh"
path = "src/lib.rs"

[[bin]]
name = "resh"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
